--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
