--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "daisyui": "^1.22.2",
+    "flat-carousel": "0.0.1",
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
